[tool.poetry]
name = "fast_nbconvert"
version = "0.1.2"
description = ""
authors = ["Davi Suga <daviciencia1@gmail.com>"]
include = ['fast_nbconvert/fast_nbconvert']

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
fast_nbconvert = "fast_nbconvert.fast_nbconvert:main"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"